[project]
name = "funuser"
version = "0.1.2"
description = "User Management System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "click>=8.1.8", "fastapi>=0.115.12", "pymysql>=1.1.1", "sqlalchemy>=2.0.40", "uvicorn>=0.33.0",]
[[project.authors]]
name = "niuliangtao"
email = "farfarfun@qq.com"

[project.scripts]
funuser = "funuser.cli:cli"

[tool.setuptools]
license-files = []
